feat: smart assement or topic based generated quizess

--- a/src/lib/i18n/locales/ar.json
+++ b/src/lib/i18n/locales/ar.json
@@ -510,7 +510,36 @@
     "study_tip": "Study Tip",
     "new_tip": "New Tip",
     "get_new_tip": "Get new study tip",
-    "tabs_label": "Study sections"
+    "tabs_label": "Study sections",
+    "quizzes": "اختبارات",
+    "select_assessment": "اختر التقييم",
+    "custom_topic": "موضوع مخصص",
+    "what_to_study": "ماذا تريد أن تدرس؟",
+    "question_count": "عدد الأسئلة",
+    "generate_quiz": "إنشاء اختبار",
+    "submit_answers": "إرسال الإجابات",
+    "raw_feedback": "النتائج",
+    "ai_feedback": "ملاحظات الذكاء الاصطناعي",
+    "try_again": "حاول مرة أخرى",
+    "no_api_key": "أضف مفتاح API في الإعدادات لاستخدام أدوات الدراسة بالذكاء الاصطناعي.",
+    "correct": "صحيح",
+    "incorrect": "خطأ",
+    "correct_answer": "الإجابة الصحيحة",
+    "generating_feedback": "جاري إنشاء الملاحظات...",
+    "ai_feedback_unavailable": "تعذر إنشاء ملاحظات الذكاء الاصطناعي.",
+    "configure_and_generate": "قم بتكوين موضوعك وانقر على إنشاء اختبار للبدء.",
+    "ai_quiz_setup": "تفعيل اختبارات الذكاء الاصطناعي",
+    "quiz_preview": "هذا ما قد يبدو عليه اختبار الذكاء الاصطناعي:",
+    "get_free_api_key": "احصل على مفتاح API Cerebras مجاني (دقيقة واحدة):",
+    "cerebras_step_1": "انتقل إلى",
+    "cerebras_step_2": "سجّل (مجاني، بدون بطاقة ائتمان)",
+    "cerebras_step_3": "انقر على \"Copy api key\" في لوحة التحكم التي تفتح",
+    "cerebras_step_4": "الصقه أدناه وانقر على حفظ",
+    "cerebras_free_tier": "مجاني: مليون رمز يوميًا.",
+    "cerebras_api_key": "مفتاح API Cerebras",
+    "paste_api_key": "الصق مفتاح API هنا",
+    "save_and_enable": "حفظ وتفعيل اختبارات الذكاء الاصطناعي",
+    "api_key_required": "أدخل مفتاح API."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
@@ -624,6 +653,7 @@
     "enable_ai_features": "Enable AI Features",
     "grade_analyser": "Grade Analyser",
     "lesson_summary_analyser": "Lesson Summary Analyser",
+    "quiz_generator": "مولد الاختبارات",
     "gemini_api_key": "Gemini API Key",
     "gemini_placeholder": "Paste your Gemini API key here",
     "plugins": "Plugins",
