--- a/src/lib/i18n/locales/de.json
+++ b/src/lib/i18n/locales/de.json
@@ -581,6 +581,7 @@
     "enable_ai_features": "KI-Funktionen Aktivieren",
     "grade_analyser": "Notenanalysator",
     "lesson_summary_analyser": "Lektionszusammenfassungs-Analysator",
+    "quiz_generator": "Quiz-Generator",
     "gemini_api_key": "Gemini API-Schlüssel",
     "gemini_placeholder": "Fügen Sie hier Ihren Gemini API-Schlüssel ein",
     "plugins": "Plugins",
@@ -826,7 +827,36 @@
     "screenshot_alt": "Plugin-Screenshot"
   },
   "study": {
-    "tabs_label": "Studienabschnitte"
+    "tabs_label": "Studienabschnitte",
+    "quizzes": "Quiz",
+    "select_assessment": "Bewertung auswählen",
+    "custom_topic": "Eigenes Thema",
+    "what_to_study": "Was möchtest du lernen?",
+    "question_count": "Anzahl der Fragen",
+    "generate_quiz": "Quiz erstellen",
+    "submit_answers": "Antworten einreichen",
+    "raw_feedback": "Ergebnisse",
+    "ai_feedback": "KI-Feedback",
+    "try_again": "Erneut versuchen",
+    "no_api_key": "Füge deinen API-Schlüssel in den Einstellungen hinzu, um KI-Lernwerkzeuge zu nutzen.",
+    "correct": "Richtig",
+    "incorrect": "Falsch",
+    "correct_answer": "Richtige Antwort",
+    "generating_feedback": "Feedback wird erstellt...",
+    "ai_feedback_unavailable": "KI-Feedback konnte nicht erstellt werden.",
+    "configure_and_generate": "Konfiguriere dein Thema und klicke auf Quiz erstellen, um zu beginnen.",
+    "ai_quiz_setup": "KI-Quiz aktivieren",
+    "quiz_preview": "So könnte dein KI-Quiz aussehen:",
+    "get_free_api_key": "Hole dir einen kostenlosen Cerebras API-Schlüssel (1 Minute):",
+    "cerebras_step_1": "Gehe zu",
+    "cerebras_step_2": "Registriere dich (kostenlos, keine Kreditkarte nötig)",
+    "cerebras_step_3": "Klicke auf \"Copy api key\" im geöffneten Dashboard",
+    "cerebras_step_4": "Füge ihn unten ein und klicke auf Speichern",
+    "cerebras_free_tier": "Kostenlos: 1 Million Tokens pro Tag.",
+    "cerebras_api_key": "Cerebras API-Schlüssel",
+    "paste_api_key": "API-Schlüssel hier einfügen",
+    "save_and_enable": "Speichern & KI-Quiz aktivieren",
+    "api_key_required": "Bitte gib deinen API-Schlüssel ein."
   },
   "toast": {
     "close_notification": "Benachrichtigung schließen",
