--- a/src/lib/i18n/locales/en-pirate.json
+++ b/src/lib/i18n/locales/en-pirate.json
@@ -587,6 +587,7 @@
     "enable_ai_features": "Enable Mystical Powers",
     "grade_analyser": "Treasure Grade Analyser",
     "lesson_summary_analyser": "Ship's Log Summary Analyser",
+    "quiz_generator": "Treasure Quiz Generator",
     "gemini_api_key": "Gemini Treasure Key",
     "gemini_placeholder": "Paste yer Gemini treasure key here",
     "plugins": "Ship Add-ons",
@@ -832,7 +833,36 @@
     "screenshot_alt": "Plugin screenshot"
   },
   "study": {
-    "tabs_label": "Study sections"
+    "tabs_label": "Study sections",
+    "quizzes": "Treasure Quizzes",
+    "select_assessment": "Select yer assessment",
+    "custom_topic": "Custom topic",
+    "what_to_study": "What do ye want to study, matey?",
+    "question_count": "Number o' questions",
+    "generate_quiz": "Generate Quiz",
+    "submit_answers": "Submit Answers",
+    "raw_feedback": "Results",
+    "ai_feedback": "AI Feedback",
+    "try_again": "Try Again",
+    "no_api_key": "Add yer API key in Settings to use AI study tools.",
+    "correct": "Correct",
+    "incorrect": "Incorrect",
+    "correct_answer": "Correct answer",
+    "generating_feedback": "Generatin' feedback...",
+    "ai_feedback_unavailable": "AI feedback could not be generated.",
+    "configure_and_generate": "Configure yer topic and click Generate Quiz to get started.",
+    "ai_quiz_setup": "Enable AI Quizzes",
+    "quiz_preview": "Here's what yer AI quiz could look like:",
+    "get_free_api_key": "Get a free Cerebras API key (takes 1 minute):",
+    "cerebras_step_1": "Sail to",
+    "cerebras_step_2": "Sign up (free, no doubloons required)",
+    "cerebras_step_3": "Click \"Copy api key\" on the dashboard that it opens to",
+    "cerebras_step_4": "Paste it below and click Save",
+    "cerebras_free_tier": "Free tier: 1 million tokens per day.",
+    "cerebras_api_key": "Cerebras API Key",
+    "paste_api_key": "Paste yer API key here",
+    "save_and_enable": "Save & Enable AI Quizzes",
+    "api_key_required": "Please enter yer API key."
   },
   "toast": {
     "close_notification": "Close notification",
