--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -529,7 +529,36 @@
     "study_tip": "Study Tip",
     "new_tip": "New Tip",
     "get_new_tip": "Get new study tip",
-    "tabs_label": "Study sections"
+    "tabs_label": "Study sections",
+    "quizzes": "Quizzes",
+    "select_assessment": "Select assessment",
+    "custom_topic": "Custom topic",
+    "what_to_study": "What do you want to study?",
+    "question_count": "Number of questions",
+    "generate_quiz": "Generate Quiz",
+    "submit_answers": "Submit Answers",
+    "raw_feedback": "Results",
+    "ai_feedback": "AI Feedback",
+    "try_again": "Try Again",
+    "no_api_key": "Add your API key in Settings to use AI study tools.",
+    "correct": "Correct",
+    "incorrect": "Incorrect",
+    "correct_answer": "Correct answer",
+    "generating_feedback": "Generating feedback...",
+    "ai_feedback_unavailable": "AI feedback could not be generated.",
+    "configure_and_generate": "Configure your topic and click Generate Quiz to get started.",
+    "ai_quiz_setup": "Enable AI Quizzes",
+    "quiz_preview": "Here's what your AI quiz could look like:",
+    "get_free_api_key": "Get a free Cerebras API key (takes 1 minute):",
+    "cerebras_step_1": "Go to",
+    "cerebras_step_2": "Sign up (free, no credit card required)",
+    "cerebras_step_3": "Click \"Copy api key\" on the dashboard that it opens to",
+    "cerebras_step_4": "Paste it below and click Save",
+    "cerebras_free_tier": "Free tier: 1 million tokens per day.",
+    "cerebras_api_key": "Cerebras API Key",
+    "paste_api_key": "Paste your API key here",
+    "save_and_enable": "Save & Enable AI Quizzes",
+    "api_key_required": "Please enter your API key."
   },
   "rss_feeds": {
     "title": "RSS Feeds",
@@ -658,6 +687,7 @@
     "enable_ai_features": "Enable AI Features",
     "grade_analyser": "Grade Analyser",
     "lesson_summary_analyser": "Lesson Summary Analyser",
+    "quiz_generator": "Quiz Generator",
     "gemini_api_key": "Gemini API Key",
     "gemini_placeholder": "Paste your Gemini API key here",
     "plugins": "Plugins",
