--- a/src/lib/i18n/locales/es.json
+++ b/src/lib/i18n/locales/es.json
@@ -581,6 +581,7 @@
     "enable_ai_features": "Habilitar Funciones de IA",
     "grade_analyser": "Analizador de Calificaciones",
     "lesson_summary_analyser": "Analizador de Resumen de Lecciones",
+    "quiz_generator": "Generador de Cuestionarios",
     "gemini_api_key": "Clave API de Gemini",
     "gemini_placeholder": "Pega tu clave API de Gemini aquí",
     "plugins": "Complementos",
@@ -826,7 +827,36 @@
     "screenshot_alt": "Captura de pantalla del complemento"
   },
   "study": {
-    "tabs_label": "Secciones de Estudio"
+    "tabs_label": "Secciones de Estudio",
+    "quizzes": "Cuestionarios",
+    "select_assessment": "Seleccionar evaluación",
+    "custom_topic": "Tema personalizado",
+    "what_to_study": "¿Qué quieres estudiar?",
+    "question_count": "Número de preguntas",
+    "generate_quiz": "Generar cuestionario",
+    "submit_answers": "Enviar respuestas",
+    "raw_feedback": "Resultados",
+    "ai_feedback": "Retroalimentación IA",
+    "try_again": "Intentar de nuevo",
+    "no_api_key": "Añade tu clave API en Ajustes para usar las herramientas de estudio con IA.",
+    "correct": "Correcto",
+    "incorrect": "Incorrecto",
+    "correct_answer": "Respuesta correcta",
+    "generating_feedback": "Generando retroalimentación...",
+    "ai_feedback_unavailable": "No se pudo generar la retroalimentación de IA.",
+    "configure_and_generate": "Configura tu tema y haz clic en Generar cuestionario para comenzar.",
+    "ai_quiz_setup": "Activar cuestionarios IA",
+    "quiz_preview": "Así podría verse tu cuestionario IA:",
+    "get_free_api_key": "Obtén una clave API gratuita de Cerebras (1 minuto):",
+    "cerebras_step_1": "Ve a",
+    "cerebras_step_2": "Regístrate (gratis, sin tarjeta de crédito)",
+    "cerebras_step_3": "Haz clic en \"Copy api key\" en el panel que se abre",
+    "cerebras_step_4": "Pégala abajo y haz clic en Guardar",
+    "cerebras_free_tier": "Plan gratuito: 1 millón de tokens al día.",
+    "cerebras_api_key": "Clave API de Cerebras",
+    "paste_api_key": "Pega tu clave API aquí",
+    "save_and_enable": "Guardar y activar cuestionarios IA",
+    "api_key_required": "Introduce tu clave API."
   },
   "toast": {
     "close_notification": "Cerrar notificación",
