--- a/src/lib/i18n/locales/it.json
+++ b/src/lib/i18n/locales/it.json
@@ -515,7 +515,36 @@
     "study_tip": "Consiglio di Studio",
     "new_tip": "Nuovo Consiglio",
     "get_new_tip": "Ottieni nuovo consiglio di studio",
-    "tabs_label": "Sezioni di studio"
+    "tabs_label": "Sezioni di studio",
+    "quizzes": "Quiz",
+    "select_assessment": "Seleziona valutazione",
+    "custom_topic": "Argomento personalizzato",
+    "what_to_study": "Cosa vuoi studiare?",
+    "question_count": "Numero di domande",
+    "generate_quiz": "Genera quiz",
+    "submit_answers": "Invia risposte",
+    "raw_feedback": "Risultati",
+    "ai_feedback": "Feedback IA",
+    "try_again": "Riprova",
+    "no_api_key": "Aggiungi la tua chiave API in Impostazioni per usare gli strumenti di studio con IA.",
+    "correct": "Corretto",
+    "incorrect": "Incorretto",
+    "correct_answer": "Risposta corretta",
+    "generating_feedback": "Generazione feedback...",
+    "ai_feedback_unavailable": "Impossibile generare il feedback IA.",
+    "configure_and_generate": "Configura il tuo argomento e clicca su Genera quiz per iniziare.",
+    "ai_quiz_setup": "Abilita quiz IA",
+    "quiz_preview": "Ecco come potrebbe apparire il tuo quiz IA:",
+    "get_free_api_key": "Ottieni una chiave API Cerebras gratuita (1 minuto):",
+    "cerebras_step_1": "Vai su",
+    "cerebras_step_2": "Registrati (gratuito, senza carta di credito)",
+    "cerebras_step_3": "Clicca su \"Copy api key\" nella dashboard che si apre",
+    "cerebras_step_4": "Incollala qui sotto e clicca su Salva",
+    "cerebras_free_tier": "Gratuito: 1 milione di token al giorno.",
+    "cerebras_api_key": "Chiave API Cerebras",
+    "paste_api_key": "Incolla la tua chiave API qui",
+    "save_and_enable": "Salva e abilita quiz IA",
+    "api_key_required": "Inserisci la tua chiave API."
   },
   "messages": {
     "failed_to_load": "Impossibile caricare i messaggi.",
@@ -629,6 +658,7 @@
     "enable_ai_features": "Abilita Funzionalità IA",
     "grade_analyser": "Analizzatore Voti",
     "lesson_summary_analyser": "Analizzatore Riepilogo Lezione",
+    "quiz_generator": "Generatore di Quiz",
     "gemini_api_key": "Chiave API Gemini",
     "gemini_placeholder": "Incolla la tua chiave API Gemini qui",
     "plugins": "Plugin",
