--- a/src/lib/i18n/locales/ja.json
+++ b/src/lib/i18n/locales/ja.json
@@ -581,6 +581,7 @@
     "enable_ai_features": "AI機能を有効にする",
     "grade_analyser": "成績アナライザー",
     "lesson_summary_analyser": "レッスン要約アナライザー",
+    "quiz_generator": "クイズジェネレーター",
     "gemini_api_key": "Gemini APIキー",
     "gemini_placeholder": "ここにGemini APIキーを貼り付けてください",
     "plugins": "プラグイン",
@@ -826,7 +827,36 @@
     "screenshot_alt": "プラグインのスクリーンショット"
   },
   "study": {
-    "tabs_label": "学習セクション"
+    "tabs_label": "学習セクション",
+    "quizzes": "クイズ",
+    "select_assessment": "評価を選択",
+    "custom_topic": "カスタムトピック",
+    "what_to_study": "何を勉強したいですか？",
+    "question_count": "問題数",
+    "generate_quiz": "クイズを生成",
+    "submit_answers": "回答を送信",
+    "raw_feedback": "結果",
+    "ai_feedback": "AIフィードバック",
+    "try_again": "再試行",
+    "no_api_key": "設定でAPIキーを追加してAI学習ツールを使用してください。",
+    "correct": "正解",
+    "incorrect": "不正解",
+    "correct_answer": "正解",
+    "generating_feedback": "フィードバックを生成中...",
+    "ai_feedback_unavailable": "AIフィードバックを生成できませんでした。",
+    "configure_and_generate": "トピックを設定して「クイズを生成」をクリックして開始してください。",
+    "ai_quiz_setup": "AIクイズを有効にする",
+    "quiz_preview": "AIクイズのプレビュー：",
+    "get_free_api_key": "無料のCerebras APIキーを取得（1分）：",
+    "cerebras_step_1": "アクセス",
+    "cerebras_step_2": "登録（無料、クレジットカード不要）",
+    "cerebras_step_3": "開いたダッシュボードで「Copy api key」をクリック",
+    "cerebras_step_4": "下に貼り付けて「保存」をクリック",
+    "cerebras_free_tier": "無料枠：1日100万トークン。",
+    "cerebras_api_key": "Cerebras APIキー",
+    "paste_api_key": "APIキーをここに貼り付け",
+    "save_and_enable": "保存してAIクイズを有効にする",
+    "api_key_required": "APIキーを入力してください。"
   },
   "toast": {
     "close_notification": "通知を閉じる",
