--- a/src/lib/i18n/locales/ko.json
+++ b/src/lib/i18n/locales/ko.json
@@ -510,7 +510,36 @@
     "study_tip": "Study Tip",
     "new_tip": "New Tip",
     "get_new_tip": "Get new study tip",
-    "tabs_label": "Study sections"
+    "tabs_label": "Study sections",
+    "quizzes": "퀴즈",
+    "select_assessment": "평가 선택",
+    "custom_topic": "맞춤 주제",
+    "what_to_study": "무엇을 공부하고 싶으신가요?",
+    "question_count": "문제 수",
+    "generate_quiz": "퀴즈 생성",
+    "submit_answers": "답변 제출",
+    "raw_feedback": "결과",
+    "ai_feedback": "AI 피드백",
+    "try_again": "다시 시도",
+    "no_api_key": "설정에서 API 키를 추가하여 AI 학습 도구를 사용하세요.",
+    "correct": "정답",
+    "incorrect": "오답",
+    "correct_answer": "정답",
+    "generating_feedback": "피드백 생성 중...",
+    "ai_feedback_unavailable": "AI 피드백을 생성할 수 없습니다.",
+    "configure_and_generate": "주제를 설정하고 퀴즈 생성을 클릭하여 시작하세요.",
+    "ai_quiz_setup": "AI 퀴즈 활성화",
+    "quiz_preview": "AI 퀴즈 미리보기:",
+    "get_free_api_key": "무료 Cerebras API 키 받기 (1분):",
+    "cerebras_step_1": "방문",
+    "cerebras_step_2": "가입 (무료, 신용카드 불필요)",
+    "cerebras_step_3": "열리는 대시보드에서 \"Copy api key\" 클릭",
+    "cerebras_step_4": "아래에 붙여넣고 저장 클릭",
+    "cerebras_free_tier": "무료: 하루 100만 토큰.",
+    "cerebras_api_key": "Cerebras API 키",
+    "paste_api_key": "API 키를 여기에 붙여넣기",
+    "save_and_enable": "저장 및 AI 퀴즈 활성화",
+    "api_key_required": "API 키를 입력하세요."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
@@ -624,6 +653,7 @@
     "enable_ai_features": "Enable AI Features",
     "grade_analyser": "Grade Analyser",
     "lesson_summary_analyser": "Lesson Summary Analyser",
+    "quiz_generator": "퀴즈 생성기",
     "gemini_api_key": "Gemini API Key",
     "gemini_placeholder": "Paste your Gemini API key here",
     "plugins": "Plugins",
