--- a/src/lib/i18n/locales/nl.json
+++ b/src/lib/i18n/locales/nl.json
@@ -510,7 +510,36 @@
     "study_tip": "Study Tip",
     "new_tip": "New Tip",
     "get_new_tip": "Get new study tip",
-    "tabs_label": "Study sections"
+    "tabs_label": "Study sections",
+    "quizzes": "Quizzen",
+    "select_assessment": "Selecteer beoordeling",
+    "custom_topic": "Aangepast onderwerp",
+    "what_to_study": "Wat wil je studeren?",
+    "question_count": "Aantal vragen",
+    "generate_quiz": "Quiz genereren",
+    "submit_answers": "Antwoorden indienen",
+    "raw_feedback": "Resultaten",
+    "ai_feedback": "AI-feedback",
+    "try_again": "Probeer opnieuw",
+    "no_api_key": "Voeg je API-sleutel toe in Instellingen om AI-studiehulpmiddelen te gebruiken.",
+    "correct": "Correct",
+    "incorrect": "Incorrect",
+    "correct_answer": "Juiste antwoord",
+    "generating_feedback": "Feedback genereren...",
+    "ai_feedback_unavailable": "AI-feedback kon niet worden gegenereerd.",
+    "configure_and_generate": "Configureer je onderwerp en klik op Quiz genereren om te beginnen.",
+    "ai_quiz_setup": "AI-quizzen inschakelen",
+    "quiz_preview": "Zo kan je AI-quiz eruitzien:",
+    "get_free_api_key": "Krijg een gratis Cerebras API-sleutel (1 minuut):",
+    "cerebras_step_1": "Ga naar",
+    "cerebras_step_2": "Registreer (gratis, geen creditcard nodig)",
+    "cerebras_step_3": "Klik op \"Copy api key\" op het dashboard dat opent",
+    "cerebras_step_4": "Plak hieronder en klik op Opslaan",
+    "cerebras_free_tier": "Gratis: 1 miljoen tokens per dag.",
+    "cerebras_api_key": "Cerebras API-sleutel",
+    "paste_api_key": "Plak je API-sleutel hier",
+    "save_and_enable": "Opslaan en AI-quizzen inschakelen",
+    "api_key_required": "Voer je API-sleutel in."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
@@ -624,6 +653,7 @@
     "enable_ai_features": "Enable AI Features",
     "grade_analyser": "Grade Analyser",
     "lesson_summary_analyser": "Lesson Summary Analyser",
+    "quiz_generator": "Quiz Generator",
     "gemini_api_key": "Gemini API Key",
     "gemini_placeholder": "Paste your Gemini API key here",
     "plugins": "Plugins",
