--- a/src/lib/i18n/locales/pl.json
+++ b/src/lib/i18n/locales/pl.json
@@ -510,7 +510,36 @@
     "study_tip": "Study Tip",
     "new_tip": "New Tip",
     "get_new_tip": "Get new study tip",
-    "tabs_label": "Study sections"
+    "tabs_label": "Study sections",
+    "quizzes": "Quizy",
+    "select_assessment": "Wybierz ocenę",
+    "custom_topic": "Własny temat",
+    "what_to_study": "Czego chcesz się uczyć?",
+    "question_count": "Liczba pytań",
+    "generate_quiz": "Generuj quiz",
+    "submit_answers": "Prześlij odpowiedzi",
+    "raw_feedback": "Wyniki",
+    "ai_feedback": "Feedback AI",
+    "try_again": "Spróbuj ponownie",
+    "no_api_key": "Dodaj klucz API w Ustawieniach, aby korzystać z narzędzi do nauki AI.",
+    "correct": "Poprawnie",
+    "incorrect": "Niepoprawnie",
+    "correct_answer": "Poprawna odpowiedź",
+    "generating_feedback": "Generowanie feedbacku...",
+    "ai_feedback_unavailable": "Nie udało się wygenerować feedbacku AI.",
+    "configure_and_generate": "Skonfiguruj temat i kliknij Generuj quiz, aby rozpocząć.",
+    "ai_quiz_setup": "Włącz quizy AI",
+    "quiz_preview": "Oto jak może wyglądać twój quiz AI:",
+    "get_free_api_key": "Uzyskaj darmowy klucz API Cerebras (1 minuta):",
+    "cerebras_step_1": "Przejdź do",
+    "cerebras_step_2": "Zarejestruj się (za darmo, bez karty kredytowej)",
+    "cerebras_step_3": "Kliknij \"Copy api key\" na pulpicie nawigacyjnym",
+    "cerebras_step_4": "Wklej go poniżej i kliknij Zapisz",
+    "cerebras_free_tier": "Darmowy plan: 1 milion tokenów dziennie.",
+    "cerebras_api_key": "Klucz API Cerebras",
+    "paste_api_key": "Wklej swój klucz API tutaj",
+    "save_and_enable": "Zapisz i włącz quizy AI",
+    "api_key_required": "Wprowadź swój klucz API."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
@@ -624,6 +653,7 @@
     "enable_ai_features": "Enable AI Features",
     "grade_analyser": "Grade Analyser",
     "lesson_summary_analyser": "Lesson Summary Analyser",
+    "quiz_generator": "Quiz Generator",
     "gemini_api_key": "Gemini API Key",
     "gemini_placeholder": "Paste your Gemini API key here",
     "plugins": "Plugins",
