--- a/src/lib/i18n/locales/pt.json
+++ b/src/lib/i18n/locales/pt.json
@@ -515,7 +515,36 @@
     "study_tip": "Dica de Estudo",
     "new_tip": "Nova Dica",
     "get_new_tip": "Obter nova dica de estudo",
-    "tabs_label": "Seções de estudo"
+    "tabs_label": "Seções de estudo",
+    "quizzes": "Questionários",
+    "select_assessment": "Selecionar avaliação",
+    "custom_topic": "Tópico personalizado",
+    "what_to_study": "O que você quer estudar?",
+    "question_count": "Número de perguntas",
+    "generate_quiz": "Gerar questionário",
+    "submit_answers": "Enviar respostas",
+    "raw_feedback": "Resultados",
+    "ai_feedback": "Feedback IA",
+    "try_again": "Tentar novamente",
+    "no_api_key": "Adicione sua chave API em Configurações para usar as ferramentas de estudo com IA.",
+    "correct": "Correto",
+    "incorrect": "Incorreto",
+    "correct_answer": "Resposta correta",
+    "generating_feedback": "Gerando feedback...",
+    "ai_feedback_unavailable": "Não foi possível gerar o feedback da IA.",
+    "configure_and_generate": "Configure seu tópico e clique em Gerar questionário para começar.",
+    "ai_quiz_setup": "Ativar questionários IA",
+    "quiz_preview": "Assim pode ser o seu questionário IA:",
+    "get_free_api_key": "Obtenha uma chave API Cerebras gratuita (1 minuto):",
+    "cerebras_step_1": "Acesse",
+    "cerebras_step_2": "Cadastre-se (grátis, sem cartão de crédito)",
+    "cerebras_step_3": "Clique em \"Copy api key\" no painel que abre",
+    "cerebras_step_4": "Cole abaixo e clique em Salvar",
+    "cerebras_free_tier": "Gratuito: 1 milhão de tokens por dia.",
+    "cerebras_api_key": "Chave API Cerebras",
+    "paste_api_key": "Cole sua chave API aqui",
+    "save_and_enable": "Salvar e ativar questionários IA",
+    "api_key_required": "Digite sua chave API."
   },
   "messages": {
     "failed_to_load": "Falha ao carregar mensagens.",
@@ -629,6 +658,7 @@
     "enable_ai_features": "Habilitar Recursos de IA",
     "grade_analyser": "Analisador de Notas",
     "lesson_summary_analyser": "Analisador de Resumo de Aula",
+    "quiz_generator": "Gerador de Questionários",
     "gemini_api_key": "Chave de API Gemini",
     "gemini_placeholder": "Cole sua chave de API Gemini aqui",
     "plugins": "Plugins",
