--- a/src/lib/i18n/locales/ru.json
+++ b/src/lib/i18n/locales/ru.json
@@ -515,7 +515,36 @@
     "study_tip": "Совет по учебе",
     "new_tip": "Новый совет",
     "get_new_tip": "Получить новый совет по учебе",
-    "tabs_label": "Разделы учебы"
+    "tabs_label": "Разделы учебы",
+    "quizzes": "Викторины",
+    "select_assessment": "Выбрать оценку",
+    "custom_topic": "Своя тема",
+    "what_to_study": "Что вы хотите изучить?",
+    "question_count": "Количество вопросов",
+    "generate_quiz": "Создать викторину",
+    "submit_answers": "Отправить ответы",
+    "raw_feedback": "Результаты",
+    "ai_feedback": "Обратная связь ИИ",
+    "try_again": "Попробовать снова",
+    "no_api_key": "Добавьте ключ API в Настройках для использования инструментов обучения с ИИ.",
+    "correct": "Правильно",
+    "incorrect": "Неправильно",
+    "correct_answer": "Правильный ответ",
+    "generating_feedback": "Генерация обратной связи...",
+    "ai_feedback_unavailable": "Не удалось сгенерировать обратную связь ИИ.",
+    "configure_and_generate": "Настройте тему и нажмите «Создать викторину», чтобы начать.",
+    "ai_quiz_setup": "Включить ИИ-викторины",
+    "quiz_preview": "Вот как может выглядеть ваша ИИ-викторина:",
+    "get_free_api_key": "Получите бесплатный ключ API Cerebras (1 минута):",
+    "cerebras_step_1": "Перейдите на",
+    "cerebras_step_2": "Зарегистрируйтесь (бесплатно, без кредитной карты)",
+    "cerebras_step_3": "Нажмите «Copy api key» на открытой панели",
+    "cerebras_step_4": "Вставьте ниже и нажмите «Сохранить»",
+    "cerebras_free_tier": "Бесплатно: 1 млн токенов в день.",
+    "cerebras_api_key": "Ключ API Cerebras",
+    "paste_api_key": "Вставьте ключ API сюда",
+    "save_and_enable": "Сохранить и включить ИИ-викторины",
+    "api_key_required": "Введите ключ API."
   },
   "messages": {
     "failed_to_load": "Не удалось загрузить сообщения.",
@@ -629,6 +658,7 @@
     "enable_ai_features": "Включить функции ИИ",
     "grade_analyser": "Анализатор оценок",
     "lesson_summary_analyser": "Анализатор сводки урока",
+    "quiz_generator": "Генератор викторин",
     "gemini_api_key": "Ключ API Gemini",
     "gemini_placeholder": "Вставьте свой ключ API Gemini здесь",
     "plugins": "Плагины",
