--- a/src/lib/i18n/locales/tr.json
+++ b/src/lib/i18n/locales/tr.json
@@ -510,7 +510,36 @@
     "study_tip": "Study Tip",
     "new_tip": "New Tip",
     "get_new_tip": "Get new study tip",
-    "tabs_label": "Study sections"
+    "tabs_label": "Study sections",
+    "quizzes": "Sınavlar",
+    "select_assessment": "Değerlendirme seç",
+    "custom_topic": "Özel konu",
+    "what_to_study": "Ne çalışmak istiyorsun?",
+    "question_count": "Soru sayısı",
+    "generate_quiz": "Sınav oluştur",
+    "submit_answers": "Yanıtları gönder",
+    "raw_feedback": "Sonuçlar",
+    "ai_feedback": "Yapay zeka geri bildirimi",
+    "try_again": "Tekrar dene",
+    "no_api_key": "Yapay zeka çalışma araçlarını kullanmak için Ayarlar'dan API anahtarınızı ekleyin.",
+    "correct": "Doğru",
+    "incorrect": "Yanlış",
+    "correct_answer": "Doğru cevap",
+    "generating_feedback": "Geri bildirim oluşturuluyor...",
+    "ai_feedback_unavailable": "Yapay zeka geri bildirimi oluşturulamadı.",
+    "configure_and_generate": "Konunuzu yapılandırın ve başlamak için Sınav oluştur'a tıklayın.",
+    "ai_quiz_setup": "Yapay zeka sınavlarını etkinleştir",
+    "quiz_preview": "Yapay zeka sınavınız böyle görünebilir:",
+    "get_free_api_key": "Ücretsiz Cerebras API anahtarı alın (1 dakika):",
+    "cerebras_step_1": "Şu adrese gidin",
+    "cerebras_step_2": "Kaydolun (ücretsiz, kredi kartı gerekmez)",
+    "cerebras_step_3": "Açılan panelde \"Copy api key\"e tıklayın",
+    "cerebras_step_4": "Aşağıya yapıştırın ve Kaydet'e tıklayın",
+    "cerebras_free_tier": "Ücretsiz: günde 1 milyon token.",
+    "cerebras_api_key": "Cerebras API Anahtarı",
+    "paste_api_key": "API anahtarınızı buraya yapıştırın",
+    "save_and_enable": "Kaydet ve Yapay Zeka Sınavlarını Etkinleştir",
+    "api_key_required": "Lütfen API anahtarınızı girin."
   },
   "messages": {
     "failed_to_load": "Failed to load messages.",
@@ -624,6 +653,7 @@
     "enable_ai_features": "Enable AI Features",
     "grade_analyser": "Grade Analyser",
     "lesson_summary_analyser": "Lesson Summary Analyser",
+    "quiz_generator": "Sınav Oluşturucu",
     "gemini_api_key": "Gemini API Key",
     "gemini_placeholder": "Paste your Gemini API key here",
     "plugins": "Plugins",
