--- a/src/lib/i18n/locales/zh.json
+++ b/src/lib/i18n/locales/zh.json
@@ -581,6 +581,7 @@
     "enable_ai_features": "启用AI功能",
     "grade_analyser": "成绩分析器",
     "lesson_summary_analyser": "课程摘要分析器",
+    "quiz_generator": "测验生成器",
     "gemini_api_key": "Gemini API密钥",
     "gemini_placeholder": "在此粘贴您的Gemini API密钥",
     "plugins": "插件",
@@ -826,7 +827,36 @@
     "screenshot_alt": "插件截图"
   },
   "study": {
-    "tabs_label": "学习部分"
+    "tabs_label": "学习部分",
+    "quizzes": "测验",
+    "select_assessment": "选择评估",
+    "custom_topic": "自定义主题",
+    "what_to_study": "你想学什么？",
+    "question_count": "题目数量",
+    "generate_quiz": "生成测验",
+    "submit_answers": "提交答案",
+    "raw_feedback": "结果",
+    "ai_feedback": "AI 反馈",
+    "try_again": "再试一次",
+    "no_api_key": "请在设置中添加 API 密钥以使用 AI 学习工具。",
+    "correct": "正确",
+    "incorrect": "错误",
+    "correct_answer": "正确答案",
+    "generating_feedback": "正在生成反馈...",
+    "ai_feedback_unavailable": "无法生成 AI 反馈。",
+    "configure_and_generate": "配置你的主题并点击生成测验开始。",
+    "ai_quiz_setup": "启用 AI 测验",
+    "quiz_preview": "你的 AI 测验可能是这样的：",
+    "get_free_api_key": "获取免费的 Cerebras API 密钥（1 分钟）：",
+    "cerebras_step_1": "访问",
+    "cerebras_step_2": "注册（免费，无需信用卡）",
+    "cerebras_step_3": "在打开的仪表板上点击「Copy api key」",
+    "cerebras_step_4": "粘贴到下方并点击保存",
+    "cerebras_free_tier": "免费版：每天 100 万 token。",
+    "cerebras_api_key": "Cerebras API 密钥",
+    "paste_api_key": "在此粘贴你的 API 密钥",
+    "save_and_enable": "保存并启用 AI 测验",
+    "api_key_required": "请输入你的 API 密钥。"
   },
   "toast": {
     "close_notification": "关闭通知",
